--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Other page</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
+    <title>Home</title>
     <link rel="stylesheet" href="styles.css" />
-    <script type="module" src="script.js"></script>
   </head>
   <body>
     <nav>
-      <a href="/">Home</a>
-      <a href="/page2.html" aria-current="page">Other page</a>
+      <a href="/" aria-current="page">Home</a>
+      <a href="/page2.html">Other page</a>
     </nav>
     <main>
-      <h1>My other page</h1>
+      <h1>Home page</h1>
+      <button onclick="generateToken()">Generate Token</button>
     </main>
+    <script type="module" src="script.js"></script>
   </body>
 </html>
